# teaclave-trustzone-sdk

./: .asf.yaml  .gitignore  .licenserc.yaml  AGENTS.md  Dockerfile.dev  Makefile  NOTICE  README.md  SECURITY.md  environment  rust-toolchain.toml  setup_std_dependencies.sh
.github/workflows/: ci.yml  reuse_build_test_qemu_image.yml  reuse_host_build_and_qemu_run.yml  reuse_test.yml  reuse_test_in_optee_repo.yml  test_in_optee_repo.yml
.patches/test_qemu/: README.md  optee-build_enable_ssh.patch
cargo-optee/: Cargo.toml  README.md  aarch64-unknown-optee.json
cargo-optee/src/: ca_builder.rs  cli.rs  common.rs  config.rs  main.rs  ta_builder.rs
ci/: build.sh  ci.sh
crates/: Cargo.toml
crates/cargo-optee/: Cargo.toml
crates/optee-teec/: Cargo.toml
crates/optee-teec-build/: Cargo.toml
crates/optee-teec-macros/: Cargo.toml
crates/optee-teec-sys/: Cargo.toml  build.rs
crates/optee-teec-sys/src/: lib.rs  tee_client_api.rs
crates/optee-teec-systest/: Cargo.toml  build.rs
crates/optee-utee/: Cargo.toml
crates/optee-utee-build/: Cargo.toml
crates/optee-utee-macros/: Cargo.toml
crates/optee-utee-sys/: Cargo.toml  build.rs
crates/optee-utee-systest/: Cargo.toml  build.rs
crates/optee-utee/src/: arithmetical.rs  crypto_op.rs  error.rs  extension.rs  identity.rs  lib.rs  parameter.rs  property.rs  tee_parameter.rs  uuid.rs
crates/optee-utee/src/net/: optee_no_std.rs  socket.rs
crates/optee-utee/src/object/: enum_handle.rs  generic_object.rs  object_define.rs  object_handle.rs  persistent_object.rs  transient_object.rs
crates/optee-utee/src/parameter/: deprecated.rs  memref.rs  mod.rs  none.rs  value.rs
crates/rustls_provider/: Cargo.toml
crates/secure_db/: Cargo.toml
docs/: README.md  advanced-setup.md  emulate-and-dev-in-docker-std.md  emulate-and-dev-in-docker.md  operation-guide-for-integration-with-each-optee-release.md  optee-utee-parameter-migration.md  optee-utee-writing-unit-tests-with-mocks.md  release-tips.md  security-model.md  ta-development-modes.md
examples/: Makefile  metadata.json
examples/digest-rs/: Makefile
examples/hello_world-rs/: Makefile
examples/mk/: common-ta.mk  example-root.mk  host.mk  no-std-ta.mk  std-ta.mk
examples/mnist-rs/: Makefile
examples/secure_storage-rs/: Makefile
examples/supp_plugin-rs/: Makefile
examples/udp_socket-rs/: Makefile
optee-teec/: Cargo.toml
optee-teec/macros/: Cargo.toml
optee-teec/optee-teec-sys/: Cargo.toml  build.rs
optee-teec/src/: extension.rs  operation.rs  parameter.rs  uuid.rs
optee-teec/systest/: Cargo.toml
optee-utee/: Cargo.toml  build.rs
optee-utee-build/: Cargo.toml
optee-utee-build/src/: code_generator.rs  error.rs  linker.rs
optee-utee-build/test_files/: test_edition_2024_result.rs
optee-utee/macros/: Cargo.toml
optee-utee/optee-utee-mock/: Cargo.toml
optee-utee/optee-utee-sys/: Cargo.toml  build.rs
optee-utee/src/: access.rs  arithmetical.rs  crypto_op.rs  error.rs  extension.rs  lib.rs  parameter.rs  property.rs  time.rs  trace.rs  volatile.rs
optee-utee/systest/: Cargo.toml  build.rs
projects/web3/ConfidentialKlave/attestation/: Cargo.toml
projects/web3/ConfidentialKlave/attestation/src/: cert.rs  date.rs  lib.rs  report_verifier.rs  sign.rs  utils.rs  verify.rs
projects/web3/ConfidentialKlave/basic_utils/: Cargo.toml
projects/web3/ConfidentialKlave/basic_utils/src/: hash.rs  lib.rs  random.rs  time.rs
projects/web3/ConfidentialKlave/core/: Cargo.toml
projects/web3/ConfidentialKlave/core/src/: device_cmd_handler.rs  key_utils.rs  lib.rs  secure_storage_client.rs  state_manager.rs  user.rs  user_registry.rs
projects/web3/ConfidentialKlave/core/src/tls/: config_builder.rs  handler_context.rs  mod.rs  session.rs  session_manager.rs
projects/web3/ConfidentialKlave/crypto/: Cargo.toml
projects/web3/ConfidentialKlave/crypto/src/: aead.rs  ecdsa.rs  lib.rs
projects/web3/ConfidentialKlave/secure_storage/: Cargo.toml
projects/web3/ConfidentialKlave/secure_storage/src/: lib.rs  secure_db.rs  tee_key.rs
projects/web3/ConfidentialKlave/secure_storage/src/local/: mod.rs  rsa.rs  storage_backend.rs
projects/web3/ConfidentialKlave/secure_storage/src/optee/: rsa.rs  storage_backend.rs
projects/web3/ConfidentialKlave/tls-ta/: Cargo.toml  Makefile  Xargo.toml  build.rs
projects/web3/ConfidentialKlave/tls-ta/src/: main.rs
projects/web3/ConfidentialKlave/types/: Cargo.toml
projects/web3/ConfidentialKlave/types/src/: lib.rs  serde_util.rs  storable.rs
projects/web3/ConfidentialKlave/types/src/share/: account.rs  approval_operations.rs  basic_types.rs  ck_hash.rs  device.rs  mod.rs  network.rs  ta_approval_chain.rs  ta_approval_chain_basic.rs  ta_operators_basic.rs  ta_user_info.rs  tee_config.rs  tee_status.rs  user.rs  wallet.rs  xpub.rs
projects/web3/ConfidentialKlave/types/src/share/address/: btc.rs  eth.rs  mod.rs
projects/web3/ConfidentialKlave/types/src/share/tx/: btc.rs  eth.rs  mod.rs  multichain.rs
projects/web3/ConfidentialKlave/types/src/trust/: mod.rs  tee_device_info.rs  tee_wallet.rs  wallet_secret.rs
projects/web3/ConfidentialKlave/types/src/trust/tx/: btc.rs  mod.rs  tee_tx.rs
projects/web3/ConfidentialKlave/types/src/trust/xpriv/: btc.rs  eth.rs  master.rs  mod.rs
projects/web3/eth_wallet/host/: Cargo.toml
projects/web3/eth_wallet/host/src/: main.rs
scripts/: entrypoint.sh
scripts/release/: build_dev_docker.sh  make_release_artifacts.sh  publish_crates.sh
tests/: optee-qemuv8.sh  setup.sh  test_acipher.sh  test_aes.sh  test_authentication.sh  test_big_int.sh  test_build_with_optee_utee_sys.sh  test_client_pool.sh  test_diffie_hellman.sh  test_digest.sh  test_error_handling.sh  test_eth_wallet.sh  test_hello_world.sh  test_hotp.sh  test_inter_ta.sh  test_message_passing_interface.sh  test_mnist_rs.sh  test_property.sh  test_random.sh  test_secure_db_abstraction.sh  test_secure_storage.sh  test_serde.sh  test_signature_verification.sh  test_supp_plugin.sh  test_tcp_client.sh  test_time.sh  test_tls_client.sh  test_tls_server.sh  test_udp_socket.sh
tools/: Cargo.toml
(+248 files in other folders)
