[package]
name = "cargo-optee"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/teaclave-trustzone-sdk.git"
description = "A cargo subcommand for building OP-TEE Trusted Applications"
edition = "2021"

[[bin]]
name = "cargo-optee"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
indexmap = "=2.11.4"
env_logger = "0.11"
log = "0.4"
tempfile = "3.8"
