# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "optee-teec-sys"
description = "Native bindings to the libteec library."
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
links = "teec"

[features]
## enables nothing.
default = []
## prevents the build script from emitting linker directives for the native
## `libteec` library. This is needed for environments where the OP-TEE client
## library is not available, such as docs.rs or host-side testing.
no_link = []

[package.metadata.docs.rs]
features = ["no_link"]

[dependencies]
document-features.workspace = true
