# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "optee-utee"
description = "TEE internal core API."
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
optee-utee-sys.workspace = true
optee-utee-macros.workspace = true
bitflags.workspace = true
uuid.workspace = true
hex.workspace = true
libc_alloc = "1.0.5"
strum_macros = "0.26"

[dev-dependencies]
rand.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
optee-utee-sys = { workspace = true, features = ["mock"] }

[features]
default = []
std = ["optee-utee-sys/std", "optee-utee-macros/std"]
no_panic_handler = []
unwind_stubs = []
