# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "basic_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3 = "0.10.6"
serde = { version = "=1.0.163", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"

# cargo will try to find the optee-utee path on x86_64, disable them:
[target.'cfg(target_os="optee")'.dependencies]
optee-utee-sys = { path = "../../incubator-teaclave-trustzone-sdk/optee-utee/optee-utee-sys"}
optee-utee = { path = "../../incubator-teaclave-trustzone-sdk/optee-utee"}

[target.'cfg(target_os="optee")'.patch.crates-io]
proc-macro2 = { git = "https://github.com/DemesneGH/proc-macro2.git"}
