# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "tls-ta"
version = "0.2.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
description = "An example of Rust OP-TEE TrustZone SDK."
edition = "2018"

[dependencies]
libc = { version = "=0.2.99", path = "../../../../rust/libc" }
proto = { path = "../proto" }
core = { path = "../core" }
optee-utee-sys = { path = "../../../../optee-utee/optee-utee-sys" }
optee-utee = { path = "../../../../optee-utee" }
types = { path = "../types" }
secure_storage = { path = "../secure_storage" }

serde = "=1.0.163"
serde_json = "1.0"
anyhow = "1.0"
bincode = "1.3.3"
zeroize = "=1.6.0"
ring = "=0.16.20"
sct = "=0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[features]
default = []
enable_clear_storage = []

[build_dependencies]
uuid = { version = "0.8" }
constants = { path = "../constants" }

[profile.release]
lto = true
debug = false
codegen-units = 1

[patch."https://github.com/apache/incubator-teaclave-trustzone-sdk.git"]
optee-utee = { path = "../../../../optee-utee" }
libc = { path = "../../../../rust/libc" }

[patch.crates-io]
proc-macro2 = { git = "https://github.com/DemesneGH/proc-macro2.git" }
ring = { git = "https://github.com/DemesneGH/ring-optee.git", branch = "0.16.20-optee" }
libc = { path = "../../../../rust/libc" }

# Note: `hex_lit` is a transitive dependency of `bitcoin` and fails to build at
# hex_lit-0.1.1/src/lib.rs:127 with the error:
#   error[E0658]: function pointer casts are not allowed in constant functions
# Workaround:
# Use a patched version of `hex_lit`. Then import it here:
# hex_lit = { path = "../hex_lit" }
