# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "types"
version = "0.2.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
description = "Data structures and functions shared by host and TA."
edition = "2018"

[features]
testnet = []

# enable testnet:
# default = [ "testnet" ]
# enable mainnet:
default = []

[dependencies]
basic_utils = { path = "../basic_utils" }

serde = { version = "=1.0.163", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_with = { version = "1.14", features = ["macros"], default-features = false }
serde-hex = "0.1.0"
hex = { version = "0.4", features = ["serde"] }
uuid = { version = "=1.3.0", features = ["serde"], default-features = false }
anyhow = "1.0"
url = { version = "=2.1.1", features = ["serde"], default-features = false }
bitcoin = { version = "=0.31.1", features = ["serde", "no-std"], default-features = false }
bincode = "1.3"
ethereum-tx-sign = "=6.1.0"
bip39 = { version = "=2.0.0", default-features = false }

[target.'cfg(target_os="optee")'.dependencies]
optee-utee-sys = { path = "../../../../optee-utee/optee-utee-sys" }
optee-utee = { path = "../../../../optee-utee" }

[patch.crates-io]
proc-macro2 = { git = "https://github.com/DemesneGH/proc-macro2.git" }

# Note: `hex_lit` is a transitive dependency of `bitcoin` and fails to build at
# hex_lit-0.1.1/src/lib.rs:127 with the error:
#   error[E0658]: function pointer casts are not allowed in constant functions
# Workaround:
# - Use a patched version of `hex_lit`.
# - Add the following override in the Cargo.toml of`tls-ta/`:
#     hex_lit = { path = "../hex_lit" }

